# vv-ros-llm

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: README.md  default.yaml
data/: roseval_benchmarks.jsonl
docker/: Dockerfile  entrypoint.sh
scripts/: validate_canonicals.py
tests/: conftest.py
tests/fixtures/: canned_response.txt  sample_benchmarks.jsonl
tests/integration/: test_pipeline_stub.py  test_store_roundtrip.py
tests/property/: test_prop_benchmarks.py  test_prop_passk.py  test_prop_prompt.py
tests/smoke/: test_smoke_cli.py
tests/unit/: test_anthropic_provider.py  test_assembler.py  test_benchmarks_loader.py  test_config.py  test_docker_cmd.py  test_experiment_runner.py  test_hypernova_provider.py  test_llm_retry.py  test_metrics_store.py  test_openai_provider.py  test_oracle_runner.py  test_pass_at_k.py  test_prompt_template.py  test_pylint_ros.py  test_pylint_ros_plugin.py  test_pytest_runner.py  test_ruff_check.py  test_sandbox.py  test_schemas.py  test_vv_pipeline.py
vv_ros_llm/: __init__.py  cli.py  config.py  logging.py  schemas.py
vv_ros_llm/analysis/: __init__.py  aggregate.py  plots.py  report.py
vv_ros_llm/analysis/templates/: report.html.j2  report.md.j2
vv_ros_llm/benchmarks/: __init__.py  loader.py  schema.py
vv_ros_llm/commands/: __init__.py  analyze.py  benchmarks.py  db.py  docker.py  experiment.py
vv_ros_llm/experiment/: __init__.py  pass_at_k.py  resume.py  runner.py  selection.py
vv_ros_llm/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  hypernova_provider.py  ollama_provider.py  openai_provider.py  prompt_template.py  retry.py
vv_ros_llm/llm/templates/: fewshot.j2  system.j2  task.j2
vv_ros_llm/metrics/: __init__.py  exporter.py  pass_at_k.py  schema.py  schema.sql  store.py
vv_ros_llm/vv/: __init__.py  assembler.py  base.py  hypothesis_runner.py  oracle_runner.py  pipeline.py  pylint_ros.py  pylint_ros_plugin.py  pytest_runner.py  ruff_check.py  sandbox.py  z3_checks.py
